Complete Role and Permission with cmdLineRunner and demo controllers